# contractiq

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/contractiq/: __init__.py  cli.py  models.py  report.py
src/contractiq/analyzer/: __init__.py  clause_extractor.py  comparison.py  risk_detector.py
src/contractiq/reviewer/: __init__.py  reviewer.py  score.py  suggestions.py
src/contractiq/templates/: __init__.py  standard.py
tests/: conftest.py  test_benchmark.py  test_clause_extractor.py  test_comparison.py  test_core.py  test_integration.py  test_models.py  test_report.py  test_reviewer.py  test_risk_detector.py  test_score.py  test_suggestions.py  test_templates.py
